fix: issue with horizontal scroll on desktop

--- a/css/large.css
+++ b/css/large.css
@@ -61,11 +61,7 @@ input[type="text"] {
     padding: 2rem;
    } 
    
-   .discount-image {
-       height: 75vh;
-       width: 62rem;
-   }
-   
+ 
    /* SOFA */
    .sofa-details {
        text-align: center;
@@ -77,4 +73,31 @@ input[type="text"] {
     .service-text button {
        font-size: 1rem;
    }
- }
+   
+   .col-images {
+   justify-content: space-around;
+   }
+   
+   .test-p {
+       font-size: 1.5rem;
+       margin: 1rem 9rem;
+   }
+   .sofa-details p {
+       font-size: 1.5rem;
+   }
+   .collections div{
+       font-size: 1.2rem;
+   }
+      .ul-block{
+       flex-direction: column;
+       font-size: 1.3rem;
+   }
+   
+   .cta {
+       width: 10%;
+   }
+   .quick-links strong {
+       font-size: 1rem;
+   }
+   
+}
